--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -278,6 +278,9 @@
 		visibility: visible
 	&__inner
 		position: relative
+		flex-direction: column
+		justify-content: space-between
+		height: 100%;
 		
 .gallery
 	margin: 0 auto
@@ -286,6 +289,7 @@
 		padding: 22px 0
 		margin: 0 auto 
 		display: flex
+		width: 100%
 		justify-content: space-between
 	&__btn-center
 		width: 272px
@@ -329,3 +333,6 @@
 		left: 50%
 		top: 50%
 		transform: translate(-50%,-50%)
+.slick-slide 
+	img
+		height: 683px
