--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -9,17 +9,11 @@ body
 	background-color: #3d4c62
 	position: relative
 	padding: 174px 0 173px
-	// max-width: 1804px
-	// margin: 0 auto
 	overflow: hidden
 	&__img
 		width: 347px
 		height: 347px
 		margin: 0 auto
-		// position: absolute
-		// left: 50%
-		// top: 50%
-		// transform: translate(-50%,-50%)
 		img 
 			display: block
 			max-width: 100%
@@ -35,7 +29,6 @@ body
 		margin-top: 64px
 		text-transform: uppercase
 	
-
 .form-user
 	&__row
 		margin-bottom: 10px
@@ -82,6 +75,7 @@ body
 	transition: opacity 0.3s
 	&:hover
 		opacity: 0.9
+
 .button-in-big
 	border-radius: 23px
 	border: 2px solid #ffffff
@@ -99,10 +93,46 @@ body
 
 .map-block
 	height: 800px
-	// max-width: 1804px
-	// margin: 0 auto
+	position: relative
 	&__img
 		height: 100%
+	&__button
+		position: absolute
+		top: 0
+		left: 0
+		display: flex
+	&__btn
+		min-width: 100px
+		padding: 10px 0
+		border-radius: 0 0 2px
+		border: 1px solid #3d4c62
+		background-color: #ffffff
+		color: #3d4c62
+		font-size: 16px
+		cursor: pointer
+		overflow: hidden
+		position: relative
+		text-align: center
+		transition: all 0.5s
+		&:before
+			content: ''
+			position: absolute
+			bottom: -3px
+			height: 5px
+			left: 0
+			width: 0
+			background-color: transparent
+			transition: all 0.5s
+		&:hover, &.is-active
+			font-weight: 500
+			&:before
+				content: ''
+				position: absolute
+				bottom: -3px
+				height: 5px
+				left: 0
+				width: 100%
+				background-color: #3d4c62
 
 .block
 	font-family: PFDinTextPro
@@ -123,16 +153,6 @@ body
 		padding: 40px 100px 60px
 	&__img
 		width: 63%
-		// background: url('../img/new_york.png')
-		// background-repeat: no-repeat
-		// background-size: cover
-		// img
-		// 	display: block
-		// 	max-width: 100%
-		// 	position: relative
-		// 	top: 50%
-		// 	left: 50%
-		// 	transform: translate(-50%,-50%)
 
 .info
 	color: #ffffff
@@ -146,6 +166,7 @@ body
 		text-align: center
 		font-weight: 500
 		line-height: 1.3
+		font-size: 24px
 		.title-big
 			font-size: 24px
 			text-transform: uppercase
@@ -173,16 +194,14 @@ body
 					background-color: #ffffff
 					display: block
 					top: 9px 
-			
-	// &__list-house
-	// 	margin-bottom: 27px
-	// &__item-value
-	// 	margin-left: 5px
-
+		
 .title-gray
 	color: #3d4c62
 
 .title-lg-hide
+	display: none
+
+.xs-show
 	display: none
 
 .img-infra
@@ -216,6 +235,7 @@ body
 		border: 2px solid #ffffff
 		background-color: #3d4c62
 		border-radius: 50%
+		cursor: pointer
 		&_reverse
 			right: 10px
 			left: auto
@@ -263,6 +283,9 @@ body
 			min-height: 100%
 			object-fit: cover
 
+.map-hide
+	display: none
+
 .btn
 	display: block
 	border-radius: 50%
@@ -271,12 +294,20 @@ body
 	width: 120px
 	height: 120px
 	border: 2px solid #ffffff
-	background-color: #000000
+	background-color: rgba(0,0,0,0.5)
 	text-transform: uppercase
 	position: relative
 	&:nth-child(2)
 		margin-left: 15px
+		margin-right: 15px
 	&__text
+		cursor: pointer
+		position: absolute
+		top: 50%
+		left: 50%
+		transform: translate(-50%,-50%)
+		text-align: center
+	img
 		cursor: pointer
 		position: absolute
 		top: 50%
@@ -336,7 +367,6 @@ body
 			max-width: 100%
 	&__bottom
 		background-color: rgba(0,0,0,0.52)
-		// opacity: 0.52
 		position: absolute
 		bottom: 0
 		padding: 28px 0
@@ -358,6 +388,10 @@ body
 		text-decoration: none
 		text-transform: uppercase
 		padding: 10px 0
+		transition: all 0.5s
+		&:hover
+			opacity: 0.7
+			border-radius: 15px
 	&__btn
 		max-width: 1640px
 		padding: 0 40px
@@ -367,8 +401,7 @@ body
 		align-items: center
 	&__icon-text
 		margin-left: 24px
-
-		
+	
 .gallery
 	margin: 0 auto
 	max-width: 928px
@@ -393,7 +426,11 @@ body
 		font-size: 16px
 		font-weight: 300
 		color: #ffffff
-		cursor: pointer 
+		cursor: pointer
+		transition: opacity 0.5s
+	&__btn-prev:hover, 
+	&__btn-next:hover
+		opacity: 0.7
 	&__btn-prev img
 		margin-right: 16px
 	&__btn-next img
@@ -411,6 +448,9 @@ body
 	text-transform: uppercase
 	font-size: 16px
 	font-weight: 300
+	transition: 0.5s
+	&:hover
+		border-radius: 15px
 
 .btn-close
 	width: 48px
@@ -439,10 +479,13 @@ body
 		top: 50%
 		transform: translate(-50%,-50%)
 
-.slick-slide 
-	img
-		height: 80vh
-		margin: 0 auto
+.popap
+	.slick-slide 
+		img
+			height: 80vh
+			margin: 0 auto
+			width: 100%
+			object-fit: cover
 
 .footer
 	font-size: 16px
@@ -482,19 +525,27 @@ body
 			right: 32px
 	.block
 		flex-direction: column-reverse
+		min-height: 100px
 		&__info
 			width: auto
 			padding: 20px 29px
 		&__img
 			width: 100%
 	.img-infra
+		&__text
+			top: 23px
 		&__logo
 			width: 188px
 			height: 80px
+			top: 23px
 			img
 				max-width: 134px
+				max-height: 60px
 		&__button
 			right: 32px
+			bottom: 24px
+		&__location
+			top: 75px
 		&__text_reverse
 			left: 0
 			right: auto
@@ -527,27 +578,26 @@ body
 			padding: 0
 		&__inner
 			padding: 0 30px
-	.slick-slide 
-		img
-			height: 100vh
-	.slick-dots
-		position: absolute
-		bottom: 25px
-		left: 0
-		text-align: center
-		right: 0
-		display: flex
-		justify-content: center
-		li
-			margin: 0 8px
-			border-radius: 50%
-			background: #ffffff
-			width: 10px
-			height: 10px
-			border: none
-			button
-				opacity: 0 
-				
+		.slick-slide 
+			img
+				height: 100vh
+		.slick-dots
+			position: absolute
+			bottom: 25px
+			left: 0
+			text-align: center
+			right: 0
+			display: flex
+			justify-content: center
+			li
+				margin: 0 8px
+				border-radius: 50%
+				background: #ffffff
+				width: 10px
+				height: 10px
+				border: none
+				button
+					opacity: 0				
 	.title-lg-hide
 		display: block
 	.title-lg-show
@@ -566,8 +616,30 @@ body
 			position: relative
 			left: auto
 			transform: translateX(0)
-			margin: 15px 0 
-		
+			margin: 15px 0
+
+.gm-style-iw
+    overflow: visible
+    border-radius: 20%
+    left: 50px
+
+.map__info-marker
+	font-size: 14px
+	font-weight: 500
+	font-family: PFDinTextPro
+	text-align: center
+	padding: 50px
+	box-shadow: 1px 2px 9px 1px rgba(1, 2, 1, 0.19)
+	width: 166px
+	color: #3d4c62
+	box-sizing: border-box
+	padding: 10px 0 10px 20px
+	.big-text
+		text-transform: uppercase
+		font-size: 16px
+	a
+		display: block
+		margin-top: 5px
 
 +r(768)
 	.block-top
@@ -576,6 +648,16 @@ body
 			height: 174px
 		&__title
 			font-size: 24px
+		&__user
+			right: 15px
+	.block
+		&__info
+			padding: 20px 15px
+	.map-block
+		&__button
+			right: 0
+		&__btn
+			width: 50%
 	.button-in-big
 		font-size: 16px
 		padding: 5px 24px
@@ -584,13 +666,33 @@ body
 			width: 113px
 			height: 52px
 			border-radius: 10px 0 0 10px
+			top: 16px
 			img
 				max-width: 69px
+				max-height: 44px
 		&__text
 			padding: 5px 10px 4px 12px
+			top: 16px
+		&__button
+			left: 0
+			right: 0
+			display: flex
+			justify-content: center
+			bottom: 16px
+		&__location
+			display: none
+			position: relative
+			top: 0
+			left: 0
+			background-color: rgba(0,0,0,0.5)
 	.gallery
+		&__btn
+			background-color: transparent
 		&__btn-center
 			display: none
+	.popap
+		&__inner
+			padding: 0 15px
 	.popap-map
 		&__btn
 			padding: 0 20px
@@ -612,18 +714,14 @@ body
 		&__logo-text
 			margin: 8px 0
 		&__icons-soc
-		 	margin: 8px 0 
+		 	margin: 8px 0
+	.xs-show
+		display: block
+	.xs-hide
+		display: none
+	.btn
+		width: 59px
+		height: 59px
+	.map-hide
+		display: block
 
-// .gm-style-iw
-// 	background: green
-// 	// border-radius: 80px
-// 	box-shadow: -14px 0px 0px green, -14px 9px 0px green, -14px -8px 0px green, 15px -8px 0px green, 15px 9px 0px green
-// 	overflow: visible !important
-// 	.gm-style-iw
-// 		position: relative
-// 		&::before
-// 		    content: ''
-// 		    width: calc(100% + 29px)
-// 		    height: calc(100% + 17px)
-// 		    position: absolute
-// 		    background: green
