--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -282,6 +282,8 @@ body
 			top: 50%
 			left: 50%
 			transform: translate(-50%,-50%)
+			max-height: 145px
+			max-width: 200px
 	&__button
 		position: absolute
 		right: 100px
