--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -4,5 +4,6 @@
 // @import "libs"
 @import "libs"
 // @import "libs/ion.rangeSlider.skinHTML5"
+@import "libs/animate.min.css"
 @import "common.sass"
 
