--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -46,7 +46,7 @@ body
 		margin-bottom: 10px
 	&__label
 		display: block
-		margin-bottom: 10px
+		margin-bottom: 3px
 		color: #3d4c62
 	&__input
 		border-radius: 5px
@@ -339,16 +339,16 @@ body
 	background: rgba(0,0,0,0.95)
 	left: 0
 	top: 0
-	height: 100%
-	width: 100%
 	z-index: 20
 	margin:  0 auto 
 	// padding: 0 102px
 	transition:  all 0.3s
-	height: 100%
+	height: 100vh
+	width: 100vw
 	&.open
 		opacity: 1
 		visibility: visible
+		overflow: hidden
 	&__inner
 		position: relative
 		flex-direction: column
@@ -367,14 +367,15 @@ body
 	position: fixed
 	left: 0
 	top: 0
-	width: 100%
-	height: 100%
 	z-index: 20
 	margin:  0 auto
 	transition:  all 0.3s
+	height: 100vh
+	width: 100vw
 	&.open
 		opacity: 1
 		visibility: visible
+		overflow: hidden
 	&__inner
 		height: 100%
 		img
@@ -421,7 +422,8 @@ body
 	
 .gallery
 	margin: 0 auto
-	max-width: 928px
+	// max-width: 928px
+	max-width: 961px
 	&__btn
 		position: absolute
 		bottom: 0
@@ -477,6 +479,7 @@ body
 	position: absolute
 	top: 26px
 	right: 0
+	cursor: pointer
 	img
 		position: absolute
 		left: 50%
@@ -490,6 +493,7 @@ body
 	border-radius: 50%
 	position: relative
 	display: inline-block
+	cursor: pointer
 	img
 		position: absolute
 		left: 50%
